--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "@mapbox/search-js-web": "^1.0.0-beta.22",
     "json-server": "^1.0.0-beta.3",
     "mapbox-gl": "^3.7.0",
     "rxjs": "~7.8.0",
